--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,6 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "useBuiltIns": "usage",
-        "corejs": 3,
-        "targets": {
-          "electron": 12,
-          "chrome": 95,
-          "node": 10
-        }
-      }
-    ]
+    "@babel/preset-env"
   ],
   "plugins": [
     "@babel/plugin-syntax-throw-expressions",
