cleaned up vuex extender, new hydration method for devtools compatibility

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,17 @@
 {
   "presets": [
-    "@babel/preset-env"
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": {
+          "node": 16,
+          "chrome": 95,
+          "electron": 12
+        }
+      }
+    ]
   ],
   "plugins": [
     "@babel/plugin-syntax-throw-expressions",
